2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml: document --smart-demangle

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* module/ia64/op_pmu.c:
	* module/x86/op_nmi.c: remove #include <op_events.h>

2003-03-06  John Levon  <levon@movementarian.org>

	* utils/opcontrol: sh != C. This is the last opcontrol
	  bug, honest ! OK, maybe not.

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* gui/oprof_start.cpp: save_config() gcc 2.95.3 warning work-around

2003-03-05  John Levon  <levon@movementarian.org>

	* utils/opcontrol: Make --setup optional (e.g.
	  opcontrol --no-vmlinux). Fix a bug in the --setup
	  exclusive arg testing.

	* doc/oprofile.xml: reflect the above

2003-03-05  John Levon  <levon@movementarian.org>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: cleanup, use s.find
	  because older gcc's don't have the right s.compare

2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol: only sleep 2 after dump on 2.4

2003-03-04  John Levon  <levon@movementarian.org>

	* configure.in: tweak the xsltproc test

2003-03-04  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/Makefile.am: don't try to build the docs
	  if it will fail.

2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol:
	* daemon/opd_kernel.h:
	* daemon/opd_image.c:
	* daemon/opd_kernel.c:
	* daemon/oprofiled.c: implement --no-vmlinux.
 	  Remove back compat for is_kernel.

	* gui/uioprof_start.base.ui:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp: support the above

	* doc/oprofile.1.in:
	* doc/oprofile.xml: doc the above

2003-03-04  John Levon  <levon@movementarian.org>

	* utils/opcontrol: allow --version, --help early on

2003-03-04  John Levon  <levon@movementarian.org>

	* libop/op_events.c: alter the parser to give file/linenr on
	  error, and handle more whitespace.
