@@ -1,3 +1,7 @@
+2003-03-06  John Levon  <levon@movementarian.org>
+
+	* doc/oprofile.xml: pedantry
+
 2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* TODO: update
